changed burger.all to results.map

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,6 +5,19 @@
   <link rel="icon" href="/images/krabby_patty.png">
 </head>
 <body>
+<nav>
+  <ul>
+    <li>
+      <a href="/burgers">Burgers</a>
+    </li>
+    <li>
+      <a href="/deals">Deals</a>
+    </li>
+    <li>
+      <a href="/restaurants">Restaurants</a>
+    </li>
+  </ul>
+</nav>
 <%= yield %>
 </body>
 </html>
