--- a/views/deals/new.erb
+++ b/views/deals/new.erb
@@ -7,14 +7,14 @@
       <label for="burgers_select">Select Burger!</label>
       <select name= "burger_id" id="burgers_select">
       <% @burgers.each do |burger| %>
-        <option value<%= burger.id %>><%= burger.name.upcase %></option>
+        <option value=<%= burger.id %>><%= burger.name.upcase %></option>
       <% end %>
       </select>
 
       <label for="days_select">Select Day!</label>
       <select name= "day_id" id="days_select">
       <% @days.each do |day| %>
-        <option value<%= day.id %>><%= day.name.upcase %></option>
+        <option value=<%= day.id %>><%= day.name.upcase %></option>
       <% end %>
       </select>
 
