--- a/views/restaurants/index.erb
+++ b/views/restaurants/index.erb
@@ -4,7 +4,7 @@
   <% @restaurants.each do |restaurant| %>
   <div>
     <p>Name: <%= restaurant.name %></p>
-    <p>Address: <% restaurant.address %></p>
+    <p>Address: <%= restaurant.address %></p>
     <p>Burgers: <% restaurant.burgers.each do |burger|%>
        <ul>
          <li><%=burger.name %></li>
