--- a/views/restaurants/index.erb
+++ b/views/restaurants/index.erb
@@ -15,3 +15,4 @@
 <hr>
   <% end %>
 </div>
+<form action="/restaurants/<%= @restaurant.id %>/delete" method="POST"><input type="submit" value="Delete"></form>
