Added burger new.erb

--- a/views/restaurants/index.erb
+++ b/views/restaurants/index.erb
@@ -3,7 +3,7 @@
 <div>
   <% @restaurants.each do |restaurant| %>
   <div>
-    <p>Name: <%= restaurant.name %></p>
+    <p><%= restaurant.name %></p>
     <p>Address: <%= restaurant.address %></p>
     <p>Burgers: <% restaurant.burgers.each do |burger|%>
        <ul>
