added background gif

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" type="text/css" href="/styles.css">
   <title>Burger Tracker</title>
   <link rel="icon" href="/images/krabby_patty.png">
 </head>
