changed text to white/gif cover

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,7 +6,7 @@
   <link rel="icon" href="/images/krabby_patty.png">
 </head>
 <body>
-<nav>
+<div class="nav">
   <ul>
     <li>
       <a href="/">Home</a>
@@ -21,7 +21,7 @@
       <a href="/restaurants">Restaurants</a>
     </li>
   </ul>
-</nav>
+</div>
 <%= yield %>
 </body>
 </html>
