--- a/public/styles.css
+++ b/public/styles.css
@@ -1,4 +1,20 @@
 body {
   background-image: url(/images/source.gif);
   background-size: cover;
+  color:white;
+}
+
+.nav ul{
+list-style: none;
+background-color: none;
+text-align: center;
+padding:0;
+margin: 0;
+}
+
+.nav li{
+font-family: Helvetica, sans-serif;
+border-bottom: 1px solid white;
+display: inline-block;
+
 }
