got links to be burgers

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -9,16 +9,16 @@
 <div class="nav">
   <ul>
     <li>
-      <a href="/">Home</a>
+      <a href="/"><img border="5" src="/images/home.png" width="150" height="75"></a>
     </li>
     <li>
-      <a href="/burgers">Burgers</a>
+      <a href="/burgers"><img border="5" src="/images/burgers.png" width="150" height="75"></a>
     </li>
     <li>
-      <a href="/deals">Deals</a>
+      <a href="/deals"><img border="5" src="/images/deals.png" width="150" height="75"></a>
     </li>
     <li>
-      <a href="/restaurants">Restaurants</a>
+      <a href="/restaurants"><img border="5" src="/images/restaurants.png" width="150" height="75"></a>
     </li>
   </ul>
 </div>
