--- a/public/styles.css
+++ b/public/styles.css
@@ -1,7 +1,7 @@
 body {
   background:;
   
-  color:white;
+  color:black;
 }
 
 .nav ul{
@@ -16,5 +16,4 @@ margin: 0;
 font-family: Helvetica, sans-serif;
 border-bottom: 1px solid white;
 display: inline-block;
-
 }
