changed restaurant image/padding

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -18,7 +18,7 @@
       <a href="/deals"><img border="5" src="/images/deals.png" width="150" height="75"></a>
     </li>
     <li>
-      <a href="/restaurants"><img border="5" src="/images/restaurants.png" width="150" height="75"></a>
+      <a href="/restaurants"><img border="5" src="/images/restaurant.png" width="150" height="75"></a>
     </li>
   </ul>
 </div>
