--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,5 @@
 body {
-  background:;
-  
+  background: dodgerblue;
   color:black;
 }
 
@@ -13,7 +12,6 @@ margin: 0;
 }
 
 .nav li{
-font-family: Helvetica, sans-serif;
-border-bottom: 1px solid white;
 display: inline-block;
+padding:0 30px 0 30px ;
 }
