added h1 title/changed link borders

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
+
   <link rel="stylesheet" type="text/css" href="/styles.css">
   <title>Burger Tracker</title>
   <link rel="icon" href="/images/krabby_patty.png">
 </head>
 <body>
+<h1 align="center">Burger Tracker</h1>
 <div class="nav">
   <ul>
     <li>
-      <a href="/"><img border="5" src="/images/home.png" width="150" height="75"></a>
+      <a href="/"><img src="/images/home.png" width="150" height="75"></a>
     </li>
     <li>
-      <a href="/burgers"><img border="5" src="/images/burgers.png" width="150" height="75"></a>
+      <a href="/burgers"><img src="/images/burgers.png" width="150" height="75"></a>
     </li>
     <li>
-      <a href="/deals"><img border="5" src="/images/deals.png" width="150" height="75"></a>
+      <a href="/deals"><img src="/images/deals.png" width="150" height="75"></a>
     </li>
     <li>
-      <a href="/restaurants"><img border="5" src="/images/restaurant.png" width="150" height="75"></a>
+      <a href="/restaurants"><img src="/images/restaurant.png" width="150" height="75"></a>
     </li>
   </ul>
 </div>
