centered burgers page

--- a/views/burgers/index.erb
+++ b/views/burgers/index.erb
@@ -1,6 +1,6 @@
-<h1>Burgers</h1>
+<h1 align="center">Burgers</h1>
 
-<table>
+<table align="center">
   <tr>
     <th>Name</th>
     <th>Restaurant</th>
