--- a/views/index.erb
+++ b/views/index.erb
@@ -1,2 +1,6 @@
-<h1>Burger Tracker</h1>
-<p>yummmmmmmmmm</p>
+<h1 class="Homepage">~~~~~~~YUMMMMMMM~~~~~~~</h1>
+<div class="Homepage">
+  <p>Welcome to Eugene's Burger Tracker.</p>
+  <p>Here you can see different deals for burgers at restaurants</p>
+  <p>*Please note if adding new deals, proceed to add them in the following order: Restaurant, Burger, Deals.</p>
+</div>
