--- a/views/burgers/index.erb
+++ b/views/burgers/index.erb
@@ -1,6 +1,6 @@
-<h1 align="center">Burgers</h1>
-
-<table align="center">
+<div class="Homepage">
+<h1>Burgers</h1>
+<table align='center'>
   <tr>
     <th>Name</th>
     <th>Restaurant</th>
@@ -13,3 +13,4 @@
   <% end %>
 </table>
 <a href="/burgers/new">Add A New Burger~</a>
+</div>
