--- a/views/burgers/new.erb
+++ b/views/burgers/new.erb
@@ -1,6 +1,7 @@
+<div class="Homepage">
 <h2>Add New Burger</h2>
 <form method="POST" action="/burgers">
-  
+
   <label for="name">Burger Name:</label>
   <input type="text" name="name" id="name">
 
@@ -13,3 +14,4 @@
 
 <input type="submit" name="Create Burger">
 </form>
+</div>
