--- a/views/deals/new.erb
+++ b/views/deals/new.erb
@@ -1,3 +1,4 @@
+<div class="Homepage">
 <h2>Add New Deal</h2>
 <form method="POST" action="/deals">
 
@@ -20,3 +21,4 @@
 
       <input type="submit" name="Create Deal">
 </form>
+</div>
