--- a/views/restaurants/new.erb
+++ b/views/restaurants/new.erb
@@ -1,3 +1,4 @@
+<div class="Homepage">
 <h2>Add New Restaurant</h2>
 <form method="POST" action="/restaurants">
   
@@ -9,3 +10,4 @@
 
   <input type="submit" name="Add Restaurant">
 </form>
+</div>
